<resources>
    <string name="app_name">Mivi</string>

    <!-- Strings related to login -->
    <string name="prompt_msn">MSN</string>
    <string name="action_sign_in">Sign in</string>
    <string name="error_invalid_msn">This MSN address is invalid</string>
    <string name="error_field_required">This field is required</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="hint_msn">Hint : 0468874507</string>
    <string name="plan_details"><u>Subscription Plan</u></string>
    <string name="product_details"><u>Product Details</u></string>
    <string name="remaining_data_balance">Remaining Data Balance :</string>
    <string name="product_name">Product Name :</string>
    <string name="price">Price :</string>
    <string name="exp_date">Expiry Date :</string>
    <string name="user_details"><u>User Details</u></string>
    <string name="first_name">First Name :</string>
    <string name="last_name">Last Name :</string>
    <string name="date_of_birth">Date Of Birth :</string>
    <string name="contact">Contact Number :</string>
    <string name="email">Email :</string>
    <string name="payment_type">Payment Type :</string>
</resources>
